started to work on firestore

--- a/public/book_table_page.html
+++ b/public/book_table_page.html
@@ -65,6 +65,7 @@
         <button type="submit">UPDATE</button>
     </form>
 
-    <script type="module" src="bundled_files.js"> </script>
+    <button id="something" type="button">Something</button>
+
 </body>
 </html>
