added userID field

--- a/public/admin_book_page.html
+++ b/public/admin_book_page.html
@@ -20,6 +20,7 @@
       <th>Category</th>
       <th>Author/s</th>
       <th>Availability</th>
+      <th>User ID</th>
       <th>Image</th>
     </thead>
     <tbody data-book-container>
