drastically changed folder structure

--- a/src/pages/admin_book_page.html
+++ b/src/pages/admin_book_page.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Akaru | Admin Page</title>
-  <link rel="stylesheet" href="admin_book_page.css">
-  <link rel="stylesheet" type="text/css" href="hidden.css">
+  <link rel="stylesheet" type="text/css" href="styles/admin_book_page.css">
+  <link rel="stylesheet" type="text/css" href="styles/hidden.css">
 </head>
   <body>
     <main>
