--- a/src/pages/entry_page.html
+++ b/src/pages/entry_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Akaru</title>
 </head>
 
@@ -56,12 +56,11 @@
 
         <!-- image panel -->
         <div class="toggle-container">
-            <img src="book.jpg" class="toggle" alt="">
+            <img src="public/images/book.jpg" class="toggle" alt="">
             </div>
         </div>
-    </div>
 
-    <script src="script.js"></script>
+    <script src="app/script.js"></script>
     <script type="module" src="bundled_files.js" alt="Open book"> </script>
 </body>
 </html>
