--- a/src/pages/entry_page.html
+++ b/src/pages/entry_page.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <script src="app/script.js"></script>
+  <script src="app/entry_page.js"></script>
   <script type="module" src="bundled_files.js"> </script>
 </body>
 
