--- a/src/pages/admin_user.html
+++ b/src/pages/admin_user.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Akaru | Admin Page</title>
   <link rel="stylesheet" type="text/css" href="styles/hidden.css">
+  <link rel="stylesheet" type="text/css" href="styles/admin_user.css">
 </head>
 
 <body>
   <main>
-    <h2>AKARU</h2>
-    <section>
-      <h1>Managing Users</h1>
+    <section class="container">
+      <h1 class="title">Managing Users</h1>
       <table class="table" id="userTable" style="border: 1px solid black;">
-        <thead>
+        <thead class="thead__container">
           <tr>
             <th>ID</th>
             <th>Username</th>
@@ -25,97 +25,105 @@
         <tbody data-user-container>
           <template data-user-row>
             <tr>
-              <td data-user-id>User ID</td>
-              <td data-user-username>Username</td>
-              <td data-user-email>Email</td>
-              <td data-user-role>Role</td>
+              <td class="content" data-user-id>User ID</td>
+              <td class="content" data-user-username>Username</td>
+              <td class="content" data-user-email>Email</td>
+              <td class="content" data-user-role>Role</td>
             </tr>
           </template>
         </tbody>
       </table>
     </section>
-
-    <section>
-      <button id="addUserFormBtn" type="button">Add User</button>
-      <button id="updateUserFormBtn" type="button">Update User</button>
-      <button id="removeUserFormBtn" type="button">Remove User</button>
-    </section>
-
-    <form id="addUserForm" action="admin_user_page.html">
-      <h3>Add User</h3>
-      <hr>
-      <div>
-        <div>
-          <label for="username">Username</label>
-          <input type="text" name="username" placeholder="username" required>
-        </div>
-        <div>
-          <label for="email">Email</label>
-          <input type="email" name="email" placeholder="email" required>
-        </div>
-        <div>
-          <label for="role">Role</label>
-          <select name="role">
-            <option value="Select a role">Select a role</option>
-            <option value="User">User</option>
-            <option value="Admin">Admin</option>
-          </select>
-        </div>
-        <div>
-          <button id="addUser" name="addUser" type="button">Add</button>
-        </div>
-      </div>
-    </form>
-
-    <form id="updateUserForm">
-      <h3>Update User</h3>
-      <hr>
-      <div>
-        <div>
-          <label for="userId">User ID</label>
-          <input type="text" name="userId" placeholder="user id" required>
-        </div>
-        <div>
-          <label for="username">Username</label>
-          <input type="text" name="username" placeholder="username">
-        </div>
-        <div>
-          <label for="email">Email</label>
-          <input type="email" name="email" placeholder="email">
-        </div>
-        <div>
-          <label for="role">Role</label>
-          <select name="role">
-            <option value="Select a role">Select a role</option>
-            <option value="User">User</option>
-            <option value="Admin">Admin</option>
-          </select>
-        </div>
-        <div>
-          <button id="updateUser" name="updateUser" type="button">Update</button>
-        </div>
-      </div>
-    </form>
-
-    <form id="removeUserForm">
-      <h3>Remove User</h3>
-      <hr>
-      <div>
-        <div>
-          <label for="userId">User ID</label>
-          <input type="text" name="userId" placeholder="user id" required>
-
-          <label for="userEmail">User Email</label>
-          <input type="text" name="userEmail" placeholder="email@example.com" required>
-        </div>
-        <div>
-          <button id="removeUser" name="removeUser" type="button">Delete</button>
-        </div>
-      </div>
-    </form>
   </main>
 
-  <script type="module" src="bundled_files.js"></script>
-</body>
+  <div class="fix__bottom">
+    <section class="button__container">
+      <button class="button" id="addUserFormBtn" type="button">Add User</button>
+      <button class="button" id="updateUserFormBtn" type="button">Update User</button>
+      <button class="button" id="removeUserFormBtn" type="button">Remove User</button>
+    </section>
 
+    <div id="formsContainer">
+      <!-- ADD FORM -->
+      <form id="addUserForm" action="admin_user_page.html" class="hidden fixed">
+        <h3 class="second__title">Add User</h3>
+        <hr>
+        <div class="hidden__container">
+          <div class="width">
+            <label class="label__name" for="username">Username</label>
+            <input class="input__value"  type="text" name="username" placeholder="username" required>
+          </div>
+          <div class="width">
+            <label class="label__name"  for="email">Email</label>
+            <input class="input__value" type="email" name="email" placeholder="email" required>
+          </div>
+          <div class="width">
+            <label class="label__name" for="role">Role</label>
+            <select class="input__value" name="role">
+              <option value="Select a role">Select a role</option>
+              <option value="User">User</option>
+              <option value="Admin">Admin</option>
+            </select>
+          </div>
+          <div>
+            <button  class="button second__button" id="addUser" name="addUser" type="button">Add</button>
+          </div>
+        </div>
+      </form>
+
+      <!--UPDATE FORM -->
+      <form id="updateUserForm" class="hidden fixed">
+        <h3 class="second__title">Update User</h3>
+        <hr>
+        <div class="hidden__container">
+          <div class="width">
+            <label class="label__name" for="userId">User ID</label>
+            <input class="input__value" type="text" name="userId" placeholder="user id" required>
+          </div>
+          <div class="width">
+            <label class="label__name" for="username">Username</label>
+            <input class="input__value" type="text" name="username" placeholder="username">
+          </div>
+          <div class="width">
+            <label class="label__name" for="email">Email</label>
+            <input class="input__value" type="email" name="email" placeholder="email">
+          </div>
+          <div class="width">
+            <label class="label__name" for="role">Role</label>
+            <select class="input__value"  name="role">
+              <option value="Select a role">Select a role</option>
+              <option value="User">User</option>
+              <option value="Admin">Admin</option>
+            </select>
+          </div>
+          <div>
+            <button class="button second__button"  id="updateUser" name="updateUser" type="button">Update</button>
+          </div>
+        </div>
+      </form>
+
+      <!-- REMOVE FORM -->
+      <form id="removeUserForm" class="hidden fixed">
+        <h3 class="second__title">Remove User</h3>
+        <hr>
+        <div class="hidden__container">
+          <div class="width">
+            <label class="label__name" for="userId">User ID</label>
+            <input class="input__value" type="text" name="userId" placeholder="user id" required>
+
+            <label class="label__name" for="userEmail">User Email</label>
+            <input class="input__value" type="text" name="userEmail" placeholder="email@example.com" required>
+          </div>
+          <div>
+            <button class="button second__button"  id="removeUser" name="removeUser" type="button">Delete</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  
+
+  <script type="module" src="bundled_files.js"></script>
+
+</body>
 </html>
