--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -5,67 +5,209 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Akaru | Home</title>
-  <link href="styles/index.css" rel="stylesheet">
+  <link href="../styles/index.css" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
-    <section>
-      <h1>DISCOVER THE FUTURE OF READING</h1>
-      <p>Elevate your library management with effortless organization, instant access to a vast collection, and
-        round-the-clock support. It's digital book management, redefined.</p>
+    <section class="background">
+      <video class="background-video" id="background-video" autoplay loop muted>
+        <source src="../../public/videos/book_landing.mp4" type="video/mp4">
+      </video>
     </section>
+    
+    <section class="header" id="header">
+      <nav>
+        <h3>Akaru</h3>
+        <div class="hamburger" id="hamburger">
+          <div>
+            <span class="line-1"></span>
+            <span class="line-2"></span>
+            <span class="line-3"></span>
+          </div>
+        </div>
+      </nav>
 
-    <section>
-      <input type="search" name="search-bar" value="" placeholder="Search Books...">
-      <button type="button">Search</button>
-    </section>
+      <div class="menu" id="menu">
+        <div class="container">
+          <ul class="options">
+            <li><a href="">Home</a></li>
+            <li><a href="">Books</a></li>
+            <!-- admin -->
+            <!-- <li><a href="">Admin</a></li> -->
+          </ul>
+          <div class="account">
+            <a href="" class="username">Name</a>
+            <a href="" class="password">Change Password</a>
+            <button id="logOutBtn" type="button" class="logout">Log Out</button>
+          </div>
+        </div>
+      </div>
 
-      <button id="logOutBtn" type="button">Log Out</button>
+      <div class="content">
+        <h1>DISCOVER THE FUTURE OF READING</h1>
+        <p>Elevate your library management with effortless organization, instant access to a vast collection, and
+          round-the-clock support. It's digital book management, redefined.</p>
+      </div>
+
+      <div>
+        <input class="search" type="search" name="search-bar" value="" placeholder="Search a Book">
+        <!-- keep or not???
+        <button type="button">Search</button> -->
+      </div>
+    </section> 
   </header>
 
-  <!-- to be deleted -->
-  <hr>
-
   <main>
-    <section id="book_nav">
-      <ul style="list-style: none; display: flex; gap: 10px;">
-        <li><a href="">All Books</a></li>
-        <li><a href="">Romance</a></li>
-        <li><a href="">Mystery</a></li>
-        <li><a href="">Horror</a></li>
-        <li><a href="">Fantasy</a></li>
-        <li><a href="">Historical</a></li>
-        <li><a href="">Biography</a></li>
-        <li><a href="">Graphic Novel</a></li>
-        <li><a href="">Classics</a></li>
-        <li><a href="">Poetry</a></li>
-      </ul>
-    </section>
+    <section class="category-list" id="book_nav">
+        <ul class="content">
+          <li><a href="">All</a></li>
+          <li><a href="">Romance</a></li>
+          <li><a href="">Mystery</a></li>
+          <li><a href="">Horror</a></li>
+          <li><a href="">Fantasy</a></li>
+          <li><a href="">Historical</a></li>
+          <li><a href="">Biography</a></li>
+          <li><a href="">Graphic Novel</a></li>
+          <li><a href="">Classics</a></li>
+          <li><a href="">Poetry</a></li>
+        </ul>
+    </section> 
 
-    <!-- to be deleted -->
-    <hr>
-
-    <section id="book_section">
-
-      <!-- <template class="book_template"> -->
+    <section class="book_section" id="book_section">
+        <!-- book 1 -->
         <div class="book_card">
           <div class="book_img">
-            <img src="public/images/book.jpg" width="200" alt="">
+            <img src="../../public/images/book.jpg" width="200" alt="">
           </div>
           <div class="book_info">
-            <p data-book-genre>Romance</p>
-            <p data-book-name>Harry Potter</p>
-            <button data-book-borrow-btn type="button">Borrow</button>
+            <p data-book-genre class="genre">Mystery</p>
+            <p data-book-name class="book_title">Tom & Jerry</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
           </div>
-
         </div>
-      <!-- </template> -->
-
+        <!-- book 2 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Graphic Novel</p>
+            <p data-book-name class="book_title">Harry Potter</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
+        <!-- book 1 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Mystery</p>
+            <p data-book-name class="book_title">Tom & Jerry</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
+        <!-- book 2 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Graphic Novel</p>
+            <p data-book-name class="book_title">Harry Potter</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
+        <!-- book 1 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Mystery</p>
+            <p data-book-name class="book_title">Tom & Jerry</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
+        <!-- book 2 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Graphic Novel</p>
+            <p data-book-name class="book_title">Harry Potter</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
+        <!-- book 1 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Mystery</p>
+            <p data-book-name class="book_title">Tom & Jerry</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
+        <!-- book 2 -->
+        <div class="book_card">
+          <div class="book_img">
+            <img src="../../public/images/book.jpg" width="200" alt="">
+          </div>
+          <div class="book_info">
+            <p data-book-genre class="genre">Graphic Novel</p>
+            <p data-book-name class="book_title">Harry Potter</p>
+            <button data-book-borrow-btn class="borrow" type="button">Borrow</button>
+          </div>
+        </div>
     </section>
-  </main>
+    </main>
+  <footer>
+    <hr class="pc">
+    <!-- row 1 col 1 -->
+    <div class="r1 c1"> 
+      <p>Akaru Books</p>
+      <p>#1 Holy Angel St. Angeles</p>
+      <p>2009 Pampanga</p>
+      <p>Made by group1</p> 
+    </div>
 
+    <!-- row 1 col 2 -->
+    <div class="r1 c2">
+      <p>contact@akaru.books</p>
+      <p>+6392345678910</p>
+    </div>
+    <hr class="pc">
+    <!-- row 2 col 1 -->
+    <div class="r2 c1"> 
+      <a href="">Instagram</a>
+      <a href="">LinkedIn</a>
+      <a href="">Twitter</a>
+      <a href="">Facebook</a>
+    </div>
+
+    <!-- row 2 col 2 -->
+    <div class="r2 c2">
+      <p>Legal Notices</p>
+      <p>Akaru&copy;2024</p>
+    </div>
+    <hr>
+  </footer>
+  <script src="../app/index.js"></script>
+  <script>
+    var hamburger = document.getElementById('hamburger');
+    var trigger = document.getElementById('header');
+
+    hamburger.onclick = function(){
+      hamburger.classList.toggle('open');
+      trigger.classList.toggle('open');
+      document.body.classList.toggle('menu-open');
+    }
+  </script>
   <script type="module" src="bundled_files.js"> </script>
 </body>
 
