fixed username issue, where blank if not logged in

--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -39,7 +39,7 @@
             <!-- <li><a href="">Admin</a></li> -->
           </ul>
           <div class="account">
-            <a id="userName" href="" class="username">Guest</a>
+            <a id="userName" href="#" class="username">Guest</a>
             <a href="#" class="password">Change Password</a>
             <button id="logOutBtn" type="button" class="logout">Log Out</button>
           </div>
