added borrowed_book page, WIP for reading/returning book

--- a/src/pages/index1.html
+++ b/src/pages/index1.html
@@ -30,8 +30,8 @@
       <section class="menu" id="menu">
         <div class="container">
           <ul class="options">
-            <li><a href="">Home</a></li>
-            <li><a href="#">Books</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="borrowed_books.html">Books</a></li>
 
             <!-- testing purposes only -->
             <!-- <button id="addBook" type="button">Add Book</button> -->
