added checkers for admin pages

--- a/src/pages/admin_book_page.html
+++ b/src/pages/admin_book_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Akaru | Admin | Manage Books</title>
+  <title>Akaru | Manage Books</title>
   <link rel="stylesheet" type="text/css" href="styles/admin_book_page.css">
 </head>
 <body>
