--- a/src/pages/admin_user.html
+++ b/src/pages/admin_user.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Akaru | Admin Page</title>
+  <title>Akaru | Manage Users</title>
   <link rel="stylesheet" type="text/css" href="styles/hidden.css">
   <link rel="stylesheet" type="text/css" href="styles/admin_user.css">
 </head>
